--- a/src/main/resources/static/HTML/newsdetailes.html
+++ b/src/main/resources/static/HTML/newsdetailes.html
@@ -274,7 +274,7 @@
 				},
 				//分享
 				shareFn:function(){
-					window.location.href="share("+nid+","+token+")";
+					window.location.href="share("+this.detailes.title+","+this.detailes.content+")";
 				},
 				//热门资讯跳转
 				hotLinkFn:function(id){
