--- a/src/main/resources/static/HTML/businessopportunity.html
+++ b/src/main/resources/static/HTML/businessopportunity.html
@@ -120,11 +120,11 @@
 				if(data.code==200){
 					var jsonData=data.data;
 					if(jsonData.picture){
-						jsonData.picture=JSON.parse(jsonData.picture);
-						shangjiData.bigImg=jsonData.picture[0]
+						jsonData.picture=jsonData.picture.split(",");
+						productData.bigImg=jsonData.picture;
 					}else{
 						jsonData.picture=[];
-						shangjiData.bigImg="";
+						productData.bigImg="";
 					}
 					
 					shangjiData.detailes=jsonData;
@@ -147,7 +147,7 @@
 					var jsonData=data.data;
 					for(var i=0;i<jsonData.length;i++){
 						if(jsonData[i].user.headPortrait){
-							jsonData[i].headPortrait=JSON.parse(jsonData[i].user.headPortrait)[0];
+							jsonData[i].headPortrait=jsonData[i].user.headPortrait;
 						}else{
 							jsonData[i].headPortrait="";
 						}
