--- a/src/main/resources/static/HTML/myprodetailes.html
+++ b/src/main/resources/static/HTML/myprodetailes.html
@@ -104,8 +104,8 @@
 				if(data.code==200){
 					var jsonData=data.data;
 					if(jsonData.picture){
-						jsonData.picture=JSON.parse(jsonData.picture);
-						productData.bigImg=jsonData.picture[0]
+						jsonData.picture=jsonData.picture.split(",");
+						productData.bigImg=jsonData.picture;
 					}else{
 						jsonData.picture=[];
 						productData.bigImg="";
@@ -131,7 +131,7 @@
 					var jsonData=data.data;
 					for(var i=0;i<jsonData.length;i++){
 						if(jsonData[i].user.headPortrait){
-							jsonData[i].headPortrait=JSON.parse(jsonData[i].user.headPortrait)[0];
+							jsonData[i].headPortrait=jsonData[i].user.headPortrait
 						}else{
 							jsonData[i].headPortrait="";
 						}
