--- a/src/main/resources/static/HTML/businessopportunity.html
+++ b/src/main/resources/static/HTML/businessopportunity.html
@@ -124,7 +124,7 @@
 						shangjiData.bigImg=jsonData.picture;
 					}else{
 						jsonData.picture=[];
-						productData.bigImg="";
+						shangjiData.bigImg="";
 					}
 					
 					shangjiData.detailes=jsonData;
