--- a/src/main/resources/static/HTML/businessopportunity.html
+++ b/src/main/resources/static/HTML/businessopportunity.html
@@ -218,7 +218,7 @@
 				//加载更多
 				getMoreFn:function(){
 					this.pageZ++;
-					if(newsData.loading){
+					if(shangjiData.loading){
 						getCommentListFn(this.pageZ);
 					};
 				},
