--- a/src/main/resources/static/HTML/myprodetailes.html
+++ b/src/main/resources/static/HTML/myprodetailes.html
@@ -163,7 +163,7 @@
 				//加载更多
 				getMoreFn:function(){
 					this.pageZ++;
-					if(newsData.loading){
+					if(productData.loading){
 						getCommentListFn(this.pageZ);
 					};
 				},
