--- a/src/main/resources/static/HTML/mybusinessopportunity.html
+++ b/src/main/resources/static/HTML/mybusinessopportunity.html
@@ -162,7 +162,7 @@
 				//加载更多
 				getMoreFn:function(){
 					this.pageZ++;
-					if(newsData.loading){
+					if(productData.loading){
 						getCommentListFn(this.pageZ);
 					};
 				},
