--- a/src/main/resources/static/HTML/invitation.html
+++ b/src/main/resources/static/HTML/invitation.html
@@ -18,13 +18,14 @@
 <script type="text/javascript" src="js/Yeffect.js"></script>
 <script type="text/javascript" src="js/Yform.js"></script>
 <script type="text/javascript" src="js/ind.js"></script>
+<script type="text/javascript" src="//bjc1.t4m.cn/applink.js"></script>
 <title>邀请好友</title>
 </head>
 
 <body>
 	<div class="g_invitation">
 		<img src="images/g_09.jpg" alt="">
-		<a href="javascript:void(0)" title="" class="g_btn-invitation">邀请好友</a>
+		<a href="javascript:void(0)" title="" class="g_btn-invitation" id="g_btn-download">邀请好友</a>
 	</div>
 	<script>
 		var isShare="";
@@ -35,6 +36,10 @@
 		}
 		
 		
+		var equipment=IsAndroid();
+		
+		
+		
 		if(isShare){
 			$(".g_btn-invitation").html("立即下载");
 		}else{
@@ -42,11 +47,24 @@
 		}
 		
 		
+		
+		
+		
+		
 		$(".g_btn-invitation").click(function(){
 			if(isShare){
-				window.location.href="";//APP下载链接
+				if(equipment){
+					window.location.href="https://www.pgyer.com/OlYC";
+				}else{
+					window.location.href="https://www.pgyer.com/l36o";
+				}
 			}else{
-				window.location.href="invitationFn()";
+				if(equipment){
+					window.location.href="invitationFn()";
+				}else{
+					window.webkit.messageHandlers.invitationFn.postMessage("");
+				}
+				
 			}
 		})
 	</script>
