--- a/src/main/resources/static/HTML/preregistration.html
+++ b/src/main/resources/static/HTML/preregistration.html
@@ -84,7 +84,7 @@
 			max:""
 		};
 		
-		
+		var equipment=IsAndroid();
 		
 		//控制器
 		new Vue({
@@ -100,9 +100,18 @@
 					sendObj.token=token;
 					call_net("POST", "/api/addregistration",sendObj, function(data){
 						if(data.code==200){
-							window.location.href="successFn()";
+							if(equipment){
+								window.location.href="successFn()";
+							}else{
+								window.webkit.messageHandlers.successFn.postMessage("");
+							}
+							
 						}else if(data.code==401){
-							window.location.href="login()";
+							if(equipment){
+								window.location.href="login()";
+							}else{
+								window.webkit.messageHandlers.login.postMessage("");
+							}
 						}else{
 							console.log(data.desc)
 						}
