--- a/src/main/resources/static/HTML/newsdetailes.html
+++ b/src/main/resources/static/HTML/newsdetailes.html
@@ -181,28 +181,27 @@
 			var scriptUrl="<script type=\"text/javascript\" src=\"//bjc1.t4m.cn/applink.js\">"+"\<\/script>";
 			$("head").append(scriptUrl)
 			setTimeout(function(){
-				console.log(MobLink)
-//				if(equipment){
-//					MobLink([
-//					    {
-//					        el: "",
-//					        path: "rqyz/goodsDetails",
-//					        params: {
-//					            key1: nid,
-//					        }
-//					    }
-//					]);
-//				}else{
-//					MobLink([
-//					    {
-//					        el: "",
-//					        path: "cloudExhbition",
-//					        params: {
-//					            key1: nid,
-//					        }
-//					    }
-//					]);
-//				}
+				if(equipment){
+					MobLink([
+					    {
+					        el: "",
+					        path: "rqyz/goodsDetails",
+					        params: {
+					            key1: nid,
+					        }
+					    }
+					]);
+				}else{
+					MobLink([
+					    {
+					        el: "",
+					        path: "cloudExhbition",
+					        params: {
+					            key1: nid,
+					        }
+					    }
+					]);
+				}
 			},1000)
 			
 		}
