--- a/src/main/resources/static/HTML/myprodetailes.html
+++ b/src/main/resources/static/HTML/myprodetailes.html
@@ -60,7 +60,7 @@
 				<li v-for="li in commentList">
 					<img :src="li.headPortrait" alt="">
 					<div class="g_comment-div">
-						<span>{{li.user.loginname}}：</span><b v-html="li.content"></b>
+						<span>{{li.user.name}}：</span><b v-html="li.content"></b>
 						<time v-html="li.createtime"></time>
 					</div>
 				</li>
@@ -119,6 +119,20 @@
 					}
 					
 					productData.detailes=jsonData;
+				}else if(data.code==401){
+					if(isShare){
+						if(equipment){
+							window.location.href="bjc1.t4m.cn";
+						}else{
+							window.location.href="https://www.pgyer.com/l36o";
+						}
+					}else{
+						if(equipment){
+							window.location.href="login()";
+						}else{
+							window.webkit.messageHandlers.login.postMessage("");
+						}
+					}	
 				}else{
 					console.log(data.desc)
 				}
@@ -141,8 +155,9 @@
 						if(jsonData[i].user.headPortrait){
 							jsonData[i].headPortrait=jsonData[i].user.headPortrait
 						}else{
-							jsonData[i].headPortrait="";
+							jsonData[i].headPortrait="images/g_10.jpg";
 						}
+						jsonData[i].createtime=jsonData[i].createtime.substring(0,16)
 						productData.commentList.push(jsonData[i]);
 					}
 					if(jsonData.length==3){
@@ -235,8 +250,10 @@
 					call_net("POST", "/api/addOrDelPraise",dianzanObj, function(data){
 						if(data.code==200){
 							if(_this.detailes.isSpZan==0){
+								Yeffect.mAlert("点赞成功");
 								_this.detailes.isSpZan=1;
 							}else{
+								Yeffect.mAlert("取消点赞");
 								_this.detailes.isSpZan=0;
 							}
 							getDetailesFn();
@@ -263,8 +280,10 @@
 					call_net("POST", "/api/addOrDelCollention",shoucangObj, function(data){
 						if(data.code==200){
 							if(_this.detailes.isSCsp==0){
+								Yeffect.mAlert("收藏成功");
 								_this.detailes.isSCsp=1;
 							}else{
+								Yeffect.mAlert("取消收藏");
 								_this.detailes.isSCsp=0;
 							}
 							getDetailesFn();
@@ -291,6 +310,7 @@
 					commentObj.type=2;
 					call_net("POST", "/api/addComment",commentObj, function(data){
 						if(data.code==200){
+							Yeffect.mAlert("评论成功");
 							_this.pageZ=1;
 							_this.commentList=[];
 							_this.commentTxt="";
